--- a/Cantril_notes/S3.md
+++ b/Cantril_notes/S3.md
@@ -58,4 +58,26 @@
 
 [https://learn.cantrill.io/courses/1820301/lectures/41301470]
 
+![1711787619581](image/S3/1711787619581.png)
+
+![1711787838801](image/S3/1711787838801.png)
+
+![1711787870878](image/S3/1711787870878.png)
+
+## Creating a static website with S3 (Handson)
+
+https://learn.cantrill.io/courses/aws-certified-solutions-architect-associate-saa-c03/lectures/41301471
+
+## Object Versioning & MFA Delete
+
+https://learn.cantrill.io/courses/aws-certified-solutions-architect-associate-saa-c03/lectures/41301473
+
+![1711788897163](image/S3/1711788897163.png)
+
+![1711800951968](image/S3/1711800951968.png)
+
+
+
+
+
 
