--- a/Cantril_notes/S3.md
+++ b/Cantril_notes/S3.md
@@ -76,6 +76,32 @@ https://learn.cantrill.io/courses/aws-certified-solutions-architect-associate-sa
 
 ![1711800951968](image/S3/1711800951968.png)
 
+![1711801057255](image/S3/1711801057255.png)
+
+![1711801129634](image/S3/1711801129634.png)
+
+![1711801186805](image/S3/1711801186805.png)
+
+## s3 Versioning (Handson)
+
+https://learn.cantrill.io/courses/aws-certified-solutions-architect-associate-saa-c03/lectures/41301474
+
+- A version enabled bucket can incur costs 
+- Also versioning can only be suspended but not disabled once enabled
+  - Suspended means that the current versions will be retained but new versions of the object cannot be created
+
+## S3 Performance Optimization
+
+https://learn.cantrill.io/courses/aws-certified-solutions-architect-associate-saa-c03/lectures/41301475
+
+![1711802825406](image/S3/1711802825406.png)
+
+![1711803020438](image/S3/1711803020438.png)
+
+![1711806185989](image/S3/1711806185989.png)
+
+
+
 
 
 
